# Tracker

./: .gitignore  CMakeLists.txt  data.h  gui.cpp  logic.h  methods.h
include/: data.h  methods.h
src/: gui.cpp  main.cpp  methods.h  renderHelpers.cpp  testDB.cpp  tests.cpp
src/core/: data.h  methods.h
src/db/: database.cpp  database.h  testDB.cpp
src/ui/: builder.h  builders.h  button.cpp  director.cpp  director.h  iBuilder.h  input.cpp  renderHelpers.cpp  text.cpp
